@@ -99,3 +99,19 @@ cdef tree.xmlDtd* _parseDtdFromFilelike(file) except NULL:
     if c_dtd is NULL:
         raise DTDParseError, "error parsing DTD"
     return c_dtd
+
+cdef extern from "etree_defs.h":
+    # macro call to 't->tp_new()' for fast instantiation
+    cdef DTD NEW_DTD "PY_NEW" (object t)
+
+cdef DTD _dtdFactory(tree.xmlDtd* c_dtd):
+    # do not run through DTD.__init__()!
+    cdef DTD dtd
+    if c_dtd is NULL:
+        return None
+    dtd = NEW_DTD(DTD)
+    dtd._c_dtd = tree.xmlCopyDtd(c_dtd)
+    if dtd._c_dtd is NULL:
+        python.PyErr_NoMemory()
+    _Validator.__init__(dtd)
+    return dtd
